# IntelliClaim

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agents/: __init__.py  cross_doc_validator.py  decision_maker.py  document_validator.py  extractor.py  fraud_detector.py  policy_checker.py
api/: dependencies.py
api/routes/: claims.py  health.py  members.py
core/: config.py  exceptions.py  gemini_retry.py
db/: __init__.py  client.py  seed.py
docs/: API_DOCUMENTATION.md  COMPONENTS.md  TESTING_GUIDE.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
models/: claim.py  decisions.py  document.py  trace.py
nginx/: nginx.conf
services/: llm_client.py  pipeline.py  policy_loader.py
supabase/: config.toml
supabase/migrations/: 20260614111347_create_tables.sql
